# pyswh

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  codecov.yml  poetry.lock.license  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build-docs.yml  coverage.yml  test-cov.yml  test.yml
.reuse/: dep5
LICENSES/: MIT.txt
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.md  index.rst  save.md
src/pyswh/: __init__.py  errors.py  swh.py
test/pyswh_test/: test_errors.py  test_swh.py
