# SPDX-FileCopyrightText: 2022 Stephan Druskat <pyswh@sdruskat.net>
#
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "pyswh"
version = "0.1.0"
description = "A Python wrapper for the Software Heritage API"
authors = ["Stephan Druskat <stephan.druskat@dlr.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
Sphinx = "5.2.3"
sphinx-rtd-theme = "^1.0.0"
sphinx-autoapi = "^2.0.0"
myst-parser = "^0.18.1"
reuse = "^1.0.0"
pytest-cov = "^4.0.0"
tox = "^3.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
