# SPDX-FileCopyrightText: 2022 Stephan Druskat <pyswh@sdruskat.net>
#
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "pyswh"
version = "0.1.0"
description = "A Python wrapper for the Software Heritage API"
authors = ["Stephan Druskat <pyswh@sdruskat.net>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sdruskat/pyswh"
repository = "https://github.com/sdruskat/pyswh"
documentation = "https://pyswh.readthedocs.io"
keywords = ["Software Heritage", "archive", "API"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Database",
    "Topic :: System :: Archiving",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Software Distribution"
]
include = [
    "CITATION.cff",
    "LICENSES/*",
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
Sphinx = "5.2.3"
sphinx-rtd-theme = "^1.0.0"
sphinx-autoapi = "^2.0.0"
myst-parser = "^0.18.1"
reuse = "^1.0.0"
pytest-cov = "^4.0.0"
tox = "^3.26.0"
responses = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
